# fiap_enterprise_challange

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
data/: weather_sp.parquet
functions/: api_calls.py  complete_data.py  get_coordenates.py  ml_enhanced_data.py  transform_data.py  upload_aws.py
tests/: test_api.py
